gen/26.1/rpk/rpk-profile.adoc
= rpk profile
:description: rpk profile

Manage rpk profiles.

An rpk profile talks to a single Redpanda cluster. You can create multiple
profiles for multiple clusters and swap between them with 'rpk profile use'.
Multiple profiles may be useful if, for example, you use rpk to talk to
a localhost cluster, a dev cluster, and a prod cluster, and you want to keep
your configuration in one place.

You can also use the RPK_PROFILE environment variable to temporarily override
the current profile without modifying your configuration. The --profile flag
takes precedence over the environment variable if both are set.

== Usage

[,bash]
----
rpk profile [flags]
  rpk profile [command]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for profile.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===